bk_ida/gccida/g0/df_bb_reg_def_chain_create
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1802:4: error: expected ';' after expression
rtx insn; // [rsp+38h] [rbp-18h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1802:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+38h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:31: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:23: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:58: error: use of undeclared identifier 'insn'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:71: error: expected ')'
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1804:5: note: to match this '('
for ( insn = bb->end; insn && insn != ( rtx)bb->head[1]; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1806:27: error: use of undeclared identifier 'insn'
if ( rtx_class[*( _WORD *)insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/df.c:1808:26: error: use of undeclared identifier 'insn'
for ( link = df_0->insns[insn->fld[0].rtuint].defs; link; link = link->next ) 
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_bb_reg_def_chain_create/src/obj/df.o] Error 1
